lambdacube-dsl/tests/accept/framebuffer05.lc
render _ =
    let frame = FrameBuffer (depthImage1 1.0)
    in ScreenOut frame
main = render (Uni (IM44F "MVP"))
