lambdacube-dsl/tests/reject/scope01.lc
let frame = FrameBuffer (ColorImage #1 1.0)
in ScreenOut frame'
